--- a/css/common.css
+++ b/css/common.css
@@ -3,8 +3,6 @@
     outline:0
 }
 
-
-
 @font-face {
     font-family: 'AppleSDGothicNeo';
     font-weight: 100;
@@ -202,6 +200,45 @@ label{
         width: 100%;
     }
 }
+
+input {
+    webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+
+    font-size: 12px;
+    height: 35px;
+    padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+    box-sizing: border-box;
+}
+
+input::placeholder {
+    color: #cccccc;
+}
+
+
+/* IE10 이상에서 input box 에 추가된 지우기 버튼 제거 */
+input::-ms-clear { display: none; }
+
+
+/* input type number 에서 화살표 제거 */
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+}
+
+/* Select box 스타일 초기화 */ 
+select {
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+}
+
+/* IE 에서 Select box 화살표 제거 */ 
+select::-ms-expand { display: none; }
+
 
 
 
