--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,22 @@
   margin-right: 5px;
 }
 
+.profile_img {
+  width: 36px;
+  height: 36px;
+  border-radius: 36px;
+  border: 1px solid #F1F1F1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.profile_img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 /* 이미지 리스트 정렬 css*/
 .listwrap {
   max-width: 100%;
@@ -99,8 +115,8 @@ span.date {
   left: 0;
   transform: translateY(-50%);
   overflow: hidden;
-  width: 35px;
-  height: 35px;
+  width: 36px;
+  height: 36px;
   border-radius: 3px;
   display: flex;
   align-items: center;
@@ -397,7 +413,7 @@ span.date {
   box-sizing: border-box;
   width: 32px;
   height: 32px;
-  border-radius: 30px;
+  border-radius: 32px;
   border: 1px solid #F1F1F1;
   overflow: hidden;
   display: flex;
@@ -456,12 +472,13 @@ span.date {
 .main_product_cnt_list a .product_price {
   width: 100%;
 }
-.main_product_cnt_list a .product_price span {
+
+.product_price span {
   font-weight: bold;
   font-size: 13px;
   color: #000000;
 }
-.main_product_cnt_list a .product_price strong {
+.product_price strong {
   margin-left: 5px;
   font-size: 13px;
   font-weight: 700;
@@ -564,13 +581,16 @@ span.date {
 }
 
 .detail_page_top {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 40px;
   background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 5;
 }
 .detail_page_top .back_btn {
   position: absolute;
@@ -679,6 +699,7 @@ span.date {
 }
 
 .detailpage_img_wrap {
+  margin-top: 40px;
   width: 100%;
   height: 330px;
   display: flex;
@@ -689,6 +710,43 @@ span.date {
 .detailpage_img_wrap img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.page_wrap {
+  height: 100vh;
+}
+
+.all_commnets_wrap {
+  width: 100%;
+  height: inherit;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.empty_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.empty_wrap .img {
+  width: 44px;
+  height: 44px;
+  border-radius: 44px;
+  background-color: #F1F1F1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.empty_wrap .img .comments_icon {
+  opacity: 0.5;
+}
+.empty_wrap p {
+  margin-top: 13px;
+  font-size: 13px;
+  color: #9E9E9E;
 }
 
 .channel_list_content > div {
@@ -809,7 +867,7 @@ span.date {
 
 .profile {
   position: relative;
-  padding: 10px 0 25px 0;
+  padding: 50px 0 25px 0;
 }
 .profile .img {
   position: absolute;
@@ -945,6 +1003,7 @@ span.date {
 }
 .user_story_profile .cnt > p {
   font-size: 13px;
+  margin-bottom: 3px;
   font-weight: 700;
 }
 .user_story_profile .cnt .info > div {
@@ -954,7 +1013,401 @@ span.date {
 }
 .user_story_profile .cnt .info > div span {
   font-size: 10px;
+  color: #9E9E9E;
+}
+
+.user_story_info {
+  padding: 15px 0 35px 0;
+}
+.user_story_info .address {
+  margin-bottom: 25px;
+}
+.user_story_info .address p {
+  display: inline-block;
+  font-size: 12px;
   color: #8B8B8B;
+}
+.user_story_info .address img {
+  cursor: pointer;
+}
+.user_story_info .content p {
+  font-size: 13px;
+  margin-bottom: 25px;
+}
+
+.keyword_list {
+  font-size: 0;
+}
+
+.keyword {
+  display: inline-block;
+  padding: 0 8px;
+  height: 22px;
+  font-size: 10px;
+  color: #666666;
+  line-height: 22px;
+  background-color: #eeeeee;
+  border-radius: 22px;
+  margin-right: 5px;
+}
+
+.story_detail_bottom .title {
+  position: relative;
+  height: 40px;
+  border-bottom: 1px solid #F1F1F1;
+}
+.story_detail_bottom .title .left {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+.story_detail_bottom .title .left img {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.story_detail_bottom .title .left span {
+  padding-left: 21px;
+  display: inline-block;
+  font-size: 13px;
+}
+.story_detail_bottom .title .right {
+  position: absolute;
+  top: 50%;
+  left: auto;
+  transform: translateY(-50%);
+  right: 12px;
+  padding-right: 10px;
+  font-size: 11px;
+  color: #8B8B8B;
+}
+.story_detail_bottom .title .right img {
+  position: absolute;
+  top: 50%;
+  left: auto;
+  transform: translateY(-50%);
+  right: 0;
+}
+
+.comment {
+  padding: 12px;
+  border-bottom: 1px solid #F1F1F1;
+}
+.comment .img {
+  position: absolute;
+  top: auto;
+  left: 12px;
+  transform: none;
+  width: 36px;
+  height: 36px;
+  overflow: hidden;
+  border-radius: 36px;
+  border: 1px solid #F1F1F1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.comment .img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.comment .cnt {
+  padding-left: 46px;
+  font-size: 11px;
+}
+.comment .cnt strong {
+  line-height: 1.6em;
+}
+.comment .cnt p {
+  margin-bottom: 6px;
+}
+.comment .cnt span {
+  color: #9E9E9E;
+}
+
+.message_wrap {
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  left: 0;
+  bottom: 0;
+  padding: 13px 0 26px 0;
+  border-top: 1px solid #F1F1F1;
+  box-sizing: border-box;
+}
+.message_wrap > div {
+  height: 100%;
+}
+.message_wrap > div .profile_img {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+.message_wrap > div .input_box {
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: auto;
+  transform: translateY(-50%);
+  right: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+}
+.message_wrap > div .input_box input {
+  width: 77%;
+  margin-left: 5%;
+  border: none;
+}
+.message_wrap > div .input_box button {
+  width: 18%;
+  text-align: left;
+  box-sizing: border-box;
+  padding-left: 4%;
+  color: #666666;
+}
+
+.input_box {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  border-radius: 40px;
+  background-color: #F1F1F1;
+}
+.input_box input {
+  border: none;
+  background-color: transparent;
+}
+
+#live_wrap {
+  position: relative;
+  height: 100vh;
+  background: url(/img/live_background_img.png) no-repeat center center;
+  background-size: cover;
+}
+
+.live_top {
+  position: relative;
+  height: 35px;
+}
+.live_top .left {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.live_top .left > div {
+  margin-right: 5px;
+}
+.live_top .left > div:last-child {
+  margin-right: 0;
+}
+.live_top .right {
+  width: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  left: auto;
+  transform: translateY(-50%);
+  right: 12px;
+}
+.live_top .right button {
+  cursor: pointer;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.icon_wrap {
+  font-size: 10px;
+  color: #ffffff;
+}
+
+.live_profile {
+  position: relative;
+  height: 38px;
+}
+.live_profile .profile_img {
+  width: 38px;
+  height: 38px;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+.live_profile .info {
+  padding-left: 48px;
+}
+.live_profile .info > p {
+  font-size: 14px;
+  color: #ffffff;
+  margin-bottom: 3px;
+}
+.live_profile .info > div {
+  font-size: 12px;
+  color: #ffffff;
+}
+
+.fllow_btn {
+  height: 22px;
+  font-size: 10px;
+  padding: 0 10px;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  border-radius: 22px;
+  cursor: pointer;
+}
+
+.live_bottom {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 105px;
+  box-sizing: border-box;
+}
+.live_bottom .profile_img {
+  position: absolute;
+  top: 0;
+  left: 12px;
+  width: 52px;
+  height: 52px;
+  border-radius: 52px;
+}
+.live_bottom .right {
+  margin-left: 62px;
+  margin-top: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.live_bottom .right .input_box {
+  width: 76%;
+  margin-right: 4%;
+  border: 1.5px solid #ffffff;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.live_bottom .right .input_box input {
+  width: 100%;
+  height: 100%;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  color: #ffffff;
+}
+.live_bottom .right .btn_wrap {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.product_info {
+  position: fixed;
+  left: 12px;
+  bottom: 113px;
+  width: 240px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border-radius: 6px;
+  overflow: hidden;
+}
+.product_info .img {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.product_info .img img {
+  max-width: 100%;
+}
+.product_info .cnt {
+  width: 70%;
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 13px;
+}
+.product_info .cnt p {
+  margin-bottom: 5px;
+}
+.product_info .cnt .product_price > span {
+  color: #EB0D2F;
+}
+.product_info .cnt .product_price > strong {
+  display: inline-block;
+  font-size: 10px;
+  height: 18px;
+  line-height: 18px;
+  padding: 0 8px;
+  border-radius: 13px;
+  background-color: #EB0D2F;
+  color: #ffffff;
+}
+
+.live_left {
+  position: fixed;
+  right: 12px;
+  bottom: 136px;
+}
+.live_left > div:first-child {
+  margin-bottom: 5px;
+}
+.live_left > div {
+  display: block;
+  width: 44px;
+  height: 44px;
+  border-radius: 44px;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.chat_wrap {
+  position: fixed;
+  left: 12px;
+  bottom: 185px;
+  width: 240px;
+  height: 80px;
+}
+.chat_wrap .list {
+  color: #ffffff;
+  font-size: 13px;
+  text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.45);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.chat_wrap .list .id {
+  padding-right: 5px;
+  opacity: 0.8;
+}
+.chat_wrap .come_user {
+  position: absolute;
+  top: -38px;
+  width: auto;
+  height: 32px;
+  line-height: 32px;
+  background: rgba(37, 219, 186, 0.8);
+  color: #ffffff;
+  padding: 0 20px;
+  border-radius: 32px;
 }
 
 /*# sourceMappingURL=style.css.map */
