--- a/css/common.css
+++ b/css/common.css
@@ -240,5 +240,30 @@ select {
 select::-ms-expand { display: none; }
 
 
+input[type="checkbox"]{
+    display: none;
+}
+input[type="checkbox"] + label > div {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #e3e3e3;
+    background-color: #ffffff;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+input[type="checkbox"]:checked  + label > div {
+    background-color: #EB0D2F;
+    border-color: #EB0D2F;
+}
+input[type="checkbox"] + label > div > i {
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: 500;
+}
+
 
 
